AdvancedDevOps/m05/t02-setup-ingress-and-configure-routing/host-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: books.my-app.local         # домен 1
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-service     
                port:
                  number: 80
    - host: users.my-app.local         # домен 2
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
